--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ name = "shooting_star"
 [dependencies]
 actix-web = "4.0.0-beta.8"
 actix-http = "3.0.0-beta.9"
+config = "0.11.0"
+serde = { version = "1", features = ["derive"]}
 
 [dev-dependencies]
 actix-rt = "2"
