--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ actix-web = "4.0.0-beta.8"
 actix-http = "3.0.0-beta.9"
 config = "0.11.0"
 serde = { version = "1", features = ["derive"]}
+sqlx = {version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ]}
+uuid = { version = "0.8.1", features = ["v4"] }
 
 [dev-dependencies]
 actix-rt = "2"
