--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,7 +1,16 @@
-application_port: 8000
-database:
-  host: "localhost"
-  port: 5432
-  username: "postgres"
-  password: "password"
-  database_name: "skills"
+dev:
+  application_port: 8000
+  database:
+    host: "localhost"
+    port: 5432
+    username: "postgres"
+    password: "password"
+    database_name: "skills"
+test:
+  application_port: 8000
+  database:
+    host: "localhost"
+    port: 5432
+    username: "postgres"
+    password: "password"
+    database_name: "test_skills"
