--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ name = "shooting_star"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-beta.8"
+actix-web = "4.0.0-beta.13"
+actix-cors = "0.6.0-beta.4"
 actix-http = "3.0.0-beta.9"
 config = "0.11.0"
 serde = { version = "1", features = ["derive"]}
@@ -27,7 +28,7 @@ tracing-futures = "0.2.4"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.1.6"
 tracing-log = "0.1.1"
-tracing-actix-web = "0.4.0-beta.12"
+tracing-actix-web = "0.5.0-beta.4"
 serde_json = "1.0"
 
 [dev-dependencies]
