--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tracing-bunyan-formatter = "0.1.6"
 tracing-log = "0.1.1"
 tracing-actix-web = "0.5.0-beta.4"
 serde_json = "1.0"
+async-trait = "0.1.52"
 
 [dev-dependencies]
 actix-rt = "2"
