--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ tracing-log = "0.1.1"
 tracing-actix-web = "0.5.0-beta.4"
 serde_json = "1.0"
 async-trait = "0.1.52"
+test-log = "0.2.8"
+env_logger = "*"
 
 [dev-dependencies]
 actix-rt = "2"
