--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,19 @@ name = "shooting-star"
 version = "0.1.0"
 authors = ["Ariel Raudsepp <ariel.raudsepp@gmail.com"]
 edition = "2018"
+default-run = "shooting_star"
 
 [lib]
+name = "shooting_star"
 path = "src/lib.rs"
 
 [[bin]]
 path = "src/main.rs"
 name = "shooting_star"
+
+[[bin]]
+path = "src/bin/run_seeds.rs"
+name = "run_seeds"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -33,8 +39,8 @@ serde_json = "1.0"
 async-trait = "0.1.52"
 test-log = "0.2.8"
 env_logger = "*"
+tokio = {version = "1", features = ["macros", "rt"]}
 
 [dev-dependencies]
 actix-rt = "2"
-tokio = "1"
 wiremock = "0.5"
