--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,11 @@ name = "run_seeds"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-beta.13"
-actix-cors = "0.6.0-beta.4"
+actix-web = "4"
+actix-cors = "0.6.1"
 actix-http = "3.0.0-beta.9"
+actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
+actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
 config = "0.11.0"
 serde = { version = "1", features = ["derive"]}
 sqlx = {version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ]}
@@ -39,6 +41,8 @@ async-trait = "0.1.52"
 test-log = "0.2.8"
 env_logger = "*"
 tokio = {version = "1", features = ["macros", "rt"]}
+secrecy = { version = "0.8", features = ["serde"] }
+anyhow = "1.0.56"
 
 [dev-dependencies]
 actix-rt = "2"
