--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,4 +1,6 @@
 dev:
+  redis_uri: "redis://127.0.0.1:6379"
+  hmac_secret: "super-long-and-secret-random-key-needed-to-verify-message-integrity"
   application_port: 8000
   database:
     host: "localhost"
@@ -7,6 +9,8 @@ dev:
     password: "password"
     database_name: "skills_dev"
 test:
+  redis_uri: "redis://127.0.0.1:6379"
+  hmac_secret: "super-long-and-secret-random-key-needed-to-verify-message-integrity"
   application_port: 8000
   database:
     host: "localhost"
