--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ anyhow = "1.0.56"
 argon2 = { version = "0.3", features = ["std"] }
 serde_json = "1"
 rand = { version = "0.8", features=["std_rng"] }
+thiserror = "1.0.24"
 
 [dev-dependencies]
 actix-rt = "2"
